--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
 <!--    <color name="teal_700">#FF018786</color>-->
 
     <color name="black">#FF000000</color>
+    <color name="grey">#858585</color>
     <color name="white">#FFFFFFFF</color>
 
     <color name="peach_1">#F9E7A9</color>
