--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,6 @@
 
     <color name="green">#2FB24B</color>
     <color name="yellow">#F4E224</color>
-    <color name="red">#EB1F1F</color>
+    <color name="red">#ED6666</color>
 
 </resources>
