--- a/app/src/main/res/layout/fragment_add_edit_deck.xml
+++ b/app/src/main/res/layout/fragment_add_edit_deck.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="15dp"
     tools:context=".fragments.AddEditDeckFragment">
 
     <LinearLayout
+        android:id="@+id/fragment_add_edit_deck_linear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -15,7 +17,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Name:"
+            android:text="@string/name_colon"
             android:textSize="25sp"
             android:textStyle="bold"
             android:textColor="@color/black"/>
@@ -28,39 +30,59 @@
             android:textSize="25sp"
             android:inputType="text"
             android:textColor="@color/grey"
-            android:text="New Deck" />
+            android:text="@string/new_deck" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Parent Deck:"
+            android:text="@string/parent_deck_colon"
             android:textSize="25sp"
             android:layout_marginTop="15dp"
             android:textStyle="bold"
             android:textColor="@color/black"/>
 
-        <RadioGroup
-            android:id="@+id/fragment_add_edit_deck_radio_group"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <!--        radio buttons will be generated programmatically here -->
-            <!--        should include a (none) option -->
-
-        </RadioGroup>
-
-        <com.google.android.material.divider.MaterialDivider
-            android:layout_width="wrap_content"
-            android:layout_height="2dp"
-            android:layout_marginVertical="10dp"
-            app:dividerColor="@color/peach_2"/>
-
-        <Button
-            android:id="@+id/fragment_add_edit_deck_done"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Done" />
-
     </LinearLayout>
 
-</ScrollView>
+    <ScrollView
+        android:id="@+id/fragment_add_edit_deck_scroll"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/fragment_add_edit_deck_divider"
+        android:layout_below="@+id/fragment_add_edit_deck_linear">
+
+            <RadioGroup
+                android:id="@+id/fragment_add_edit_deck_radio_group"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <!--        radio buttons will be generated programmatically here -->
+                <!--        should include a (none) option -->
+
+            </RadioGroup>
+
+    </ScrollView>
+
+    <com.google.android.material.divider.MaterialDivider
+        android:id="@+id/fragment_add_edit_deck_divider"
+        android:layout_width="wrap_content"
+        android:layout_height="2dp"
+        android:layout_marginVertical="10dp"
+        app:dividerColor="@color/peach_2"
+        android:layout_above="@id/fragment_add_edit_deck_delete"/>
+
+    <Button
+        android:id="@+id/fragment_add_edit_deck_delete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/red"
+        android:text="@string/delete"
+        android:layout_above="@id/fragment_add_edit_deck_done"/>
+
+    <Button
+        android:id="@+id/fragment_add_edit_deck_done"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/done"
+        android:layout_alignParentBottom="true"/>
+
+</RelativeLayout>
