--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="brown_1">#A28C39</color>
     <color name="brown_2">#665414</color>
 
-    <color name="green">#2FB24B</color>
+    <color name="green">#68DF82</color>
     <color name="yellow">#F4E224</color>
     <color name="red">#ED6666</color>
 
