--- a/app/src/main/res/layout/sub_card_row.xml
+++ b/app/src/main/res/layout/sub_card_row.xml
@@ -2,11 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginVertical="8dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/sub_card_row_root">
 
     <RelativeLayout
+        android:id="@+id/sub_card_row_background"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="0dp"
@@ -25,27 +27,26 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:padding="8dp"
+            android:layout_marginLeft="12dp"
             android:text="Click to select"/>
 
-        <ScrollView
-            android:id="@+id/sub_card_row_event_wrapper"
+        <TextView
+            android:id="@+id/sub_card_row_event"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/sub_card_row_checkbox"
             android:layout_above="@id/sub_card_row_date"
-            android:visibility="visible">
-
-            <TextView
-                android:id="@+id/sub_card_row_event"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="The Bombing of Pearl Harbour, which was a massive and ferocious attack on the United States of America launched by the Empire of Japan."
-                android:textAlignment="center"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                android:paddingHorizontal="16dp"/>
-
-        </ScrollView>
+            android:paddingHorizontal="16dp"
+            android:visibility="visible"
+            android:autoSizeTextType="uniform"
+            android:autoSizeMinTextSize="12sp"
+            android:autoSizeMaxTextSize="24sp"
+            android:autoSizeStepGranularity="1sp"
+            android:text="The Bombing of Pearl Harbour, which was a massive and ferocious attack on the United States of America launched by the Empire of Japan."
+            android:textAlignment="center"
+            android:maxLines="3"
+            android:ellipsize="end"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/sub_card_row_date"
@@ -59,25 +60,24 @@
             android:text="7 December 1941" />
 <!--        text becomes ██████████ when obscured-->
 
-        <ScrollView
-            android:id="@+id/sub_card_row_info_wrapper"
+        <TextView
+            android:id="@+id/sub_card_row_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/sub_card_row_checkbox"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="44dp"
-            android:visibility="gone">
-
-            <TextView
-                android:id="@+id/sub_card_row_info"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingHorizontal="16dp"
-                android:text="The event brought the United States of America into war agianst the Japanese Empire, leading to the latter's eventual downfall in 1945. The bombing also inflamed public opinion in America and was the final straw in overcoming the longstanding isolationist sentiment held by the American public."
-                android:textAlignment="center"
-                android:textSize="20sp" />
-
-        </ScrollView>
+            android:paddingHorizontal="16dp"
+            android:visibility="gone"
+            android:autoSizeTextType="uniform"
+            android:autoSizeMinTextSize="12sp"
+            android:autoSizeMaxTextSize="24sp"
+            android:autoSizeStepGranularity="1sp"
+            android:maxLines="6"
+            android:text="The event brought the United States of America into war agianst the Japanese Empire, leading to the latter's eventual downfall in 1945. The bombing also inflamed public opinion in America and was the final straw in overcoming the longstanding isolationist sentiment held by the American public."
+            android:textAlignment="center"
+            android:ellipsize="end"
+            android:textSize="20sp" />
 
     </RelativeLayout>
 
