--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,109 +8,180 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.GameFragment">
 
-    <TextView
-        android:id="@+id/fragment_game_scoreboard"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Scoreboard Loading..."
-        android:textSize="20sp"
-        android:textColor="@color/grey"/>
-
-    <com.google.android.material.divider.MaterialDivider
-        android:id="@+id/fragment_game_divider_1"
-        android:layout_width="wrap_content"
-        android:layout_height="2dp"
-        android:layout_marginVertical="12dp"
-        app:dividerColor="@color/peach_2"/>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/fragment_game_rv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fragment_game_vs"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:tint="@color/brown_2"
-            app:maxImageSize="56dp"
-            android:backgroundTint="@color/white"
-            android:layout_gravity="center"
-            android:visibility="visible"
-            android:clickable="false"
-            android:src="@drawable/versus_icon" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fragment_game_check"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:maxImageSize="32dp"
-            android:backgroundTint="@color/green"
-            app:borderWidth="0dp"
-            android:layout_gravity="center"
-            android:visibility="gone"
-            android:clickable="false"
-            android:src="@drawable/check_solid" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fragment_game_cross"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:maxImageSize="32dp"
-            android:backgroundTint="@color/red"
-            app:borderWidth="0dp"
-            android:layout_gravity="center"
-            android:visibility="gone"
-            android:clickable="false"
-            android:src="@drawable/xmark_solid" />
-
-    </FrameLayout>
-
-    <com.google.android.material.divider.MaterialDivider
-        android:id="@+id/fragment_game_divider_2"
-        android:layout_width="wrap_content"
-        android:layout_height="2dp"
-        android:layout_marginVertical="12dp"
-        app:dividerColor="@color/peach_2"/>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_above="@id/fragment_game_timeline">
 
-        <Button
-            android:id="@+id/fragment_game_before"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+        <TextView
+            android:id="@+id/fragment_game_scoreboard"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/peach_1"
-            android:text="BEFORE"/>
+            android:text="Scoreboard Loading..."
+            android:textSize="20sp"
+            android:textColor="@color/grey"/>
 
-        <Button
-            android:id="@+id/fragment_game_during"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/peach_1"
-            android:layout_marginHorizontal="12dp"
-            android:text="DURING"/>
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/fragment_game_divider_1"
+            android:layout_width="wrap_content"
+            android:layout_height="2dp"
+            android:layout_marginVertical="12dp"
+            app:dividerColor="@color/peach_2"/>
 
-        <Button
-            android:id="@+id/fragment_game_after"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/fragment_game_rv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fragment_game_vs"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:tint="@color/brown_2"
+                app:maxImageSize="56dp"
+                android:backgroundTint="@color/white"
+                android:layout_gravity="center"
+                android:visibility="visible"
+                android:clickable="false"
+                android:src="@drawable/versus_icon" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fragment_game_check"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:maxImageSize="32dp"
+                android:backgroundTint="@color/green"
+                app:borderWidth="0dp"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                android:clickable="false"
+                android:src="@drawable/check_solid" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fragment_game_cross"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:maxImageSize="32dp"
+                android:backgroundTint="@color/red"
+                app:borderWidth="0dp"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                android:clickable="false"
+                android:src="@drawable/xmark_solid" />
+
+        </FrameLayout>
+
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/fragment_game_divider_2"
+            android:layout_width="wrap_content"
+            android:layout_height="2dp"
+            android:layout_marginVertical="12dp"
+            app:dividerColor="@color/peach_2"/>
+
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/peach_1"
-            android:text="AFTER"/>
+            android:text="Relative to the first event, the second event is..."
+            android:textSize="12sp"
+            android:textAlignment="center"
+            android:textColor="@color/grey"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginVertical="8dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/fragment_game_before"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    app:fabCustomSize="80dp"
+                    app:maxImageSize="40dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/chevron_left_solid"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginVertical="8dp"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="BEFORE"
+                    android:textSize="12sp"
+                    android:textAlignment="center"
+                    android:textColor="@color/grey"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/fragment_game_during"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    app:fabCustomSize="80dp"
+                    app:maxImageSize="40dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/equals_solid"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginVertical="8dp"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="DURING"
+                    android:textSize="12sp"
+                    android:textAlignment="center"
+                    android:textColor="@color/grey"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/fragment_game_after"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:fabCustomSize="80dp"
+                    app:maxImageSize="40dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/chevron_right_solid"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginVertical="8dp"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="AFTER"
+                    android:textSize="12sp"
+                    android:textAlignment="center"
+                    android:textColor="@color/grey"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
 
     <Button
-        android:id="@+id/fragment_add_edit_deck_done"
+        android:id="@+id/fragment_game_timeline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="View Timeline"
@@ -118,4 +189,4 @@
         android:layout_marginTop="6dp"
         android:layout_alignParentBottom="true"/>
 
-</LinearLayout>
+</RelativeLayout>
