--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -63,13 +63,24 @@
         android:backgroundTint="@color/peach_2"
         android:layout_below="@id/fragment_timeline_divider_1" />
 
+    <TextView
+        android:id="@+id/fragment_timeline_flip_instructions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:layout_marginTop="8dp"
+        android:textColor="@color/grey"
+        android:textAlignment="center"
+        android:text="Tap a card to flip it over."
+        android:layout_below="@id/fragment_timeline_edit"/>
+
     <com.google.android.material.divider.MaterialDivider
         android:id="@+id/fragment_timeline_divider_2"
         android:layout_width="wrap_content"
         android:layout_height="2dp"
         android:layout_marginVertical="16dp"
         app:dividerColor="@color/peach_2"
-        android:layout_below="@id/fragment_timeline_edit"/>
+        android:layout_below="@id/fragment_timeline_flip_instructions"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fragment_timeline_rv"
