--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,4 +13,8 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+<!--    <style name="ToolbarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">-->
+<!--        &lt;!&ndash; Customize color of navigation drawer icon and back arrow &ndash;&gt;-->
+<!--        <item name="homeAsUpIndicator">@drawable/chevron_left_solid</item>-->
+<!--    </style>-->
 </resources>
